--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
     <main>
         <section id="login">
             <div id="imagem"></div>
-            <div id="fomulario">
-                <h1>Login</h1>
-                <p>Seja bem-vendo(a) novamente.
-                    Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
-                </p>
-                <form action="login.php" method="post">
-
-                </form>
-            </div>
-        </section>
-    </main>
+            
+                <div id="formulario">
+                    <h1>Login</h1>
+                    <p>Seja bem-vendo(a) novamente.
+                        Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                    <form action="login.php" method="post"></form>
+                </div>
     
+        </section>
+    </main> 
 </body>
 </html>
