--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
@@ -17,7 +18,25 @@
                     <h1>Login</h1>
                     <p>Seja bem-vendo(a) novamente.
                         Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                    <form action="login.php" method="post"></form>
+                    <form action="login.php" method="post" autocomplete="on"></form>
+                        <div class="campo">
+                            <span class="material-symbols-outlined">login</span>
+                            <input type="email" name="login" id="ilogin" placeholder="e-mail" required maxlength="30">
+                            <label for="ilogin">Login</label>
+                        </div>
+                        <div class="campo">
+                            <span class="material-symbols-outlined">password</span>
+                            <input type="password" name="senha" id="isenha" placeholder="senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                            <label for="isenha">Senha</label>
+                        </div>
+                        <input type="submit" value="Entrar">
+                        <a href="Esqueci a senha">Esqueci a senha <i class="material-symbols-outlined">email</i>
+
+                            
+                        </a>
+
+
+
                 </div>
     
         </section>
