--- a/index.html
+++ b/index.html
@@ -18,27 +18,21 @@
                     <h1>Login</h1>
                     <p>Seja bem-vendo(a) novamente.
                         Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                    <form action="login.php" method="post" autocomplete="on"></form>
+                    <form action="login.php" method="post" autocomplete="on">
                         <div class="campo">
                             <span class="material-symbols-outlined">login</span>
-                            <input type="email" name="login" id="ilogin" placeholder="e-mail" required maxlength="30">
+                            <input type="email" name="login" id="ilogin" placeholder="e-mail" autocomplete="e-mail" required maxlength="30">
                             <label for="ilogin">Login</label>
                         </div>
                         <div class="campo">
                             <span class="material-symbols-outlined">password</span>
-                            <input type="password" name="senha" id="isenha" placeholder="senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                            <input type="password" name="senha" id="isenha" placeholder="senha" autocomplete="current-password" required minlength="8" maxlength="30">
                             <label for="isenha">Senha</label>
                         </div>
                         <input type="submit" value="Entrar">
-                        <a href="Esqueci a senha">Esqueci a senha <i class="material-symbols-outlined">email</i>
-
-                            
-                        </a>
-
-
-
+                        <a href="Esqueci a senha" class="botao">Esqueci a senha <i class="material-symbols-outlined">mail</i></a>
+                    </form>
                 </div>
-    
         </section>
     </main> 
 </body>
